--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@bitbucket.org/lemon-project/lemon-chrome-bot.git"
+    "url": "git+ssh://git@github.com:lemoncloud-io/lemon-chrome-bot.git"
   },
   "author": "Steve (steve@lemoncloud.io)",
   "license": "MIT"
