--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,6 +16,7 @@
     "background": {
         "scripts": [
             "js/bootloader.js",
+            "js/tcp-server.js",
             "js/socket.io.js",
             "js/background.js"
         ],
